[bumpversion]
current_version = 0.0.3
commit = False
tag = False
tag_name = v{new_version}
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
serialize = {major}.{minor}.{patch}


[bumpversion:file:src/massdb/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"


[metadata]
name = massdb
version = attr: massdb.__version__
author = Zachary B. Haiman
author_email = zhaiman@eng.ucsd.edu
maintainer = Zachary B. Haiman
maintainer_email = zhaiman@eng.ucsd.edu
classifiers =
	Development Status :: 1 - Planning
	Intended Audience :: Science/Research
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Scientific/Engineering :: Bio-Informatics
license = MIT
license_file = LICENSE
description = Source code for the MASS database project managing software.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
	python
	MASS

[options]
zip_safe = True
install_requires =
	mass_manager
	notebook
python_requires = ~=3.6
include_package_data = True
packages = find:
package_dir =
	= src

[options.packages.find]
where = src
include =
	massdb

[options.extras_require]
development =
	bumpversion
	pre-commit
	towncrier
	tox
all =
	%(development)s

[flake8]
ignore = E203, E266, E501, W503, F401
max-line-length = 88
max-complexity = 18
